J3_TP4/php-gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: php-gateway
  namespace: database
spec:
  gatewayClassName: example-class
  listeners:
  - name: http
    protocol: HTTP
    port: 80
    hostname: "pma.local"
    allowedRoutes:
      namespaces:
        from: database
