J3_TP4/php-http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: php-httproute
spec:
  parentRefs:
  - name: php-gateway
  hostnames:
  - "pma.local"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /login
    backendRefs:
    - name: php-nodeport
      port: 30080
